--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -71,20 +71,34 @@
 
     </div><!--small screen-->
     <div hide-xs hide-sm flex-gt-lg="25" flex-gt-md="30" flex-order-sm="1" flex-order-xs="5"  layout="column" layout-align="start center" id="container-two">
-      <div ng-if="currentUser.accessLevel =='regional'" layout="column" style="border:solid thin red;width:100%;">
-       <div flex layout>
-         <div></div>
+      <div ng-if="currentUser.accessLevel =='regional'" layout="column" style="border:none;width:100%;">
+       <div flex layout layout-align="space-around center">
+         <span  class="md-icon"><i class="material-icons">filter_list</i></span>
+         <div style="margin:.5rem 0;">
+           <md-select ng-model="searchCriteria" required aria-label="Texas Groups" placeholder="Group">
+             <md-option ng-repeat="g in groupList" value="{{ g.group.title }}" >{{ g.group.title }}</md-option>
+           </md-select>
+         </div>
+         <div><a href="#"><i class="material-icons">clear_all</i></a></div>
          <div ng-if="currentUser.accessLevel == 'regional'" layout="column" layout-align="center center">
            <md-button layout layout-align="center center" class="md-fab md-mini md-icon-button md-warn" ng-click="sendRegionalReminder()"><i class="material-icons" style="font-size:18px;">chat_bubble_outline</i></md-button>
-           <span class="md-caption">Group Reminder</span>
+           <small class="md-caption">Reminder</small>
          </div>
        </div>
         <div flex layout>
-          <table><thead><th>Employee</th><th>Group</th></thead><tbody><tr ng-repeat="e in employees"><td>{{e.lname}} ,{{e.fname}}</td><td>{{e.group.title}}</td></tr></tbody></table>
+          <table><thead>
+          <th>Employee</th>
+          <th class="md-body-2"><a layout layout-align="start center" href="#"
+                                   ng-click="sortOption='group.title'; sortReverse = !sortReverse">Group
+            <span ng-if="sortOption=='group.title' && !sortReverse"><i class="material-icons">arrow_drop_down</i></span>
+            <span ng-if="sortOption=='group.title' && sortReverse"><i
+              class="material-icons">arrow_drop_up</i></span></a></th>
+          </thead>
+            <tbody><tr ng-repeat="e in employees | orderBy:sortOption:sortReverse | filter:searchCriteria"><td>{{e.lname}} ,{{e.fname}}</td><td>{{e.group.title}}</td></tr></tbody></table>
         </div>
         <div flex layout>New Block</div>
       </div>
-      <div ng-controller="DashboardController" layout="column" layout-align-sm="center center"
+      <div ng-hide="currentUser.accessLevel=='regional'" ng-controller="DashboardController" layout="column" layout-align-sm="center center"
            id="confirmation-box"  >
         <div flex-66 layout >
           <div ng-if="statusCurrent" layout layout-align="center center" class="confirmation-icon"><i class="material-icons">done</i></div>
@@ -105,7 +119,7 @@
           <span class="md-body-1">Your confirmation has been saved!</span>
         </div>
       </div>
-      <div hide-xs hide-sm ng-controller="IssueReportController" layout="column" id="issue-tracker-form">
+      <div ng-hide="currentUser.accessLevel=='regional'" hide-xs hide-sm ng-controller="IssueReportController" layout="column" id="issue-tracker-form">
         <div flex>
           <div flex flex-xs="100" layout>
             <div>
